--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,18 @@
-<h1>Listing articles</h1>
-<%= link_to 'New article', new_article_path %>
+<h1>Listing posts</h1>
+
+<% if author_signed_in? %>
+<%= link_to 'New a post', new_article_path %> |
+<%= link_to('Sign out', destroy_author_session_path, method: :delete) %>
+<% else %>
+<%= link_to 'Sign up to be an author', new_registration_path(:author) %> |
+<%= link_to 'Already an author? Log in to write a post', new_session_path(:author) %>
+<% end %>
 
 <table>
   <tr>
     <th>Title</th>
     <th>Text</th>
+    <th>Author</th>
     <th>Posted at</th>
     <th colspan="3"></th>
   </tr>
@@ -13,12 +21,15 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
+      <td><%= article.author.email %></td>
       <td><%= article.created_at %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
+      <% if current_author == article.author %>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Delete', article_path(article),
                       method: :delete,
                       data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
