--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
@@ -14,5 +15,7 @@
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 
+<% if current_author == @article.author %>
 <%= link_to 'Edit', edit_article_path(@article) %> |
+<% end %>
 <%= link_to 'Back', articles_path %>
