Switch article to post

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,9 +8,9 @@
   <%= comment.body %>
 </p>
 
-<% if current_author == @article.author %>
+<% if current_author == @post.author %>
 <p>
-  <%= link_to 'delete comment', [comment.article, comment],
+  <%= link_to 'delete comment', [comment.post, comment],
               method: :delete,
               data: { confirm: 'Are you sure?' } %>
 </p>
