--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>A Ruby Made Blog</h1>
 
 <% if author_signed_in? %>
-<%= link_to 'New a post', new_article_path %> |
+<%= link_to 'New a post', new_post_path %> |
 <%= link_to('Sign out', destroy_author_session_path, method: :delete) %>
 <% else %>
 <%= link_to 'Sign up to write a post', new_registration_path(:author) %> |
@@ -18,16 +18,16 @@
     <th colspan="3"></th>
   </tr>
 
-  <% @articles.each do |article| %>
+  <% @posts.each do |post| %>
     <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= article.author.email %></td>
-      <td><%= article.created_at %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <% if current_author == article.author %>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article),
+      <td><%= post.title %></td>
+      <td><%= post.text %></td>
+      <td><%= post.author.email %></td>
+      <td><%= post.created_at %></td>
+      <td><%= link_to 'Show', post_path(post) %></td>
+      <% if current_author == post.author %>
+      <td><%= link_to 'Edit', edit_post_path(post) %></td>
+      <td><%= link_to 'Delete', post_path(post),
                       method: :delete,
                       data: { confirm: 'Are you sure?' } %></td>
       <% end %>
@@ -35,4 +35,4 @@
   <% end %>
 </table>
 
-<%= paginate @articles %>
+<%= paginate @posts %>
