--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,31 @@
 <%= form_with(model: [ @post, @post.comments.build ], local: true) do |form| %>
+
+  <% if @comment && @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@comment.errors.count, "error") %> prohibited
+        this comment from being saved:
+      </h2>
+      <ul>
+        <% @comment.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= form.label :commenter %><br>
     <%= form.text_field :commenter %>
   </p>
+
   <p>
     <%= form.label :body %><br>
     <%= form.text_area :body %>
   </p>
+
   <p>
     <%= form.submit %>
   </p>
+
 <% end %>
