--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,18 +14,18 @@
     </div>
   <% end %>
 
-  <p>
+  <div class="field">
     <%= form.label :title %><br>
     <%= form.text_field :title %>
-  </p>
+  </div>
 
-  <p>
+  <div class="field">
     <%= form.label :text %><br>
     <%= form.text_area :text %>
-  </p>
+  </div>
 
-  <p>
+  <div class="actions">
     <%= form.submit %>
-  </p>
+  </div>
 
 <% end %>
