--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New a Post</h1>
+<h2>New a Post</h2>
 
-<%= render 'form' %>
+<div class="container">
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Back', posts_path %>
