--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,20 @@
 <h1><%= @post.title %></h1>
 
-<p>
+<i><%= @post.author.email %> posted at <%= @post.created_at %></i>
+<div class="card">
   <%= @post.text %>
-</p>
+</div>
 
-<h2>Comments</h2>
-<%= render @post.comments %>
+<h3>Comments:</h3>
 
-<h2>Add a comment:</h2>
+<div class="card">
+  <%= render @post.comments %>
+</div>
+
+<h3>Add a comment:</h3>
 <%= render 'comments/form' %>
 
 <% if current_author == @post.author %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Edit', edit_post_path(@post) %> |
 <% end %>
 <%= link_to 'Back', posts_path %>
